feat: add one to many relationship between route and review

--- a/src/main/webapp/app/entities/review/detail/review-detail.component.html
+++ b/src/main/webapp/app/entities/review/detail/review-detail.component.html
@@ -34,6 +34,12 @@
         <dd>
           <span>{{ review.reviewDate | formatMediumDate }}</span>
         </dd>
+        <dt><span>Route</span></dt>
+        <dd>
+          <div *ngIf="review.route">
+            <a [routerLink]="['/route', review.route.id, 'view']">{{ review.route.id }}</a>
+          </div>
+        </dd>
         <dt><span>App User</span></dt>
         <dd>
           <div *ngIf="review.appUser">
