--- a/src/main/webapp/app/entities/review/list/review.component.html
+++ b/src/main/webapp/app/entities/review/list/review.component.html
@@ -68,6 +68,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="route.id">
+            <div class="d-flex">
+              <span>Route</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col" jhiSortBy="appUser.id">
             <div class="d-flex">
               <span>App User</span>
@@ -87,6 +93,11 @@
           <td>{{ review.content }}</td>
           <td>{{ review.rating }}</td>
           <td>{{ review.reviewDate | formatMediumDate }}</td>
+          <td>
+            <div *ngIf="review.route">
+              <a [routerLink]="['/route', review.route.id, 'view']">{{ review.route.id }}</a>
+            </div>
+          </td>
           <td>
             <div *ngIf="review.appUser">
               <a [routerLink]="['/app-user', review.appUser.id, 'view']">{{ review.appUser.id }}</a>
