Previous routes feature should be working

--- a/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
+++ b/src/main/webapp/app/entities/app-user/detail/app-user-detail.component.html
@@ -33,6 +33,15 @@
             >{{ last ? '' : ', ' }}
           </span>
         </dd>
+
+        <dt><span>Previous Routes</span></dt>
+        <dd>
+          <ul>
+            <li *ngFor="let route of routes; let last = last">
+              <a [routerLink]="['/route', route.id, 'view']">{{ route.title }}</a> {{ last ? '' : ', ' }}
+            </li>
+          </ul>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
