--- a/src/main/webapp/app/map-display/map-display.component.scss
+++ b/src/main/webapp/app/map-display/map-display.component.scss
@@ -31,13 +31,13 @@
   color: red;
 }
 
+#logInHint {
+  font-size: 25px;
+}
+
 #userReviewForm {
   display: flex;
   flex-direction: column;
-}
-
-#reviewSuccessText {
-  color: green;
 }
 
 #map {
