--- a/src/main/webapp/app/search/search.component.scss
+++ b/src/main/webapp/app/search/search.component.scss
@@ -1,23 +1,24 @@
-.search {
+body {
+}
+
+.container {
   width: 60%;
-  margin: auto;
   text-align: center;
+  margin: auto;
+  height: 100%;
 }
 
 .input-box {
   width: 100%;
   float: left;
+  background-color: #555;
+  border: 2px solid #777;
+  border-radius: 4px;
+  color: #ddd;
 }
 
 .button {
   width: 10%;
-  margin: auto;
-}
-
-.result {
-  width: 60%;
-  height: 60%;
-  text-align: center;
   margin: auto;
 }
 
