1.hide foryou page if user havent log in;2.make random recommendation works.

--- a/src/main/webapp/app/for-you/for-you.component.html
+++ b/src/main/webapp/app/for-you/for-you.component.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>For You Page</title>
     <style>
-      /* Add CSS styles here */
       body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -47,7 +46,7 @@
   <body>
     <header>
       <h1>Welcome Back, User 2651</h1>
-      <p>prepare for your next journey?</p>
+      <p>Prepare for your next journey?</p>
     </header>
     <div class="container">
       <section *ngFor="let route of routes">
