--- a/src/main/webapp/app/search/search.component.html
+++ b/src/main/webapp/app/search/search.component.html
@@ -23,11 +23,9 @@
         <p class="field">Routes travelled</p>
         <p class="field">Reviews posted</p>
         <div *ngFor="let item of arrayBufferData">
-          <a class="link" routerLink="../app-user/{{ item.id }}/view">
-            <p class="field">{{ item.user.login }}</p>
-            <p class="field">{{ item.numRoutes }}</p>
-            <p class="field">{{ item.numReviews }}</p>
-          </a>
+          <a class="field" routerLink="../app-user/{{ item.id }}/view">{{ item.user.login }}</a>
+          <a class="field" routerLink="../app-user/{{ item.id }}/view">{{ item.numRoutes }}</a>
+          <a class="field" routerLink="../app-user/{{ item.id }}/view">{{ item.numReviews }}</a>
         </div>
       </div>
     </div>
