--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav data-cy="navbar" class="navbar navbar-light navbar-expand-md bg-light">
+<nav data-cy="navbar" class="navbar navbar-light navbar-expand-md bg-black-30">
   <div class="container-fluid">
     <a class="navbar-brand logo" routerLink="/" (click)="collapseNavbar()">
       <span class="navbar-title">Atlas</span>
@@ -18,14 +18,6 @@
     </a>
     <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="account !== null">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-          <a class="nav-link" routerLink="/user-routes" (click)="collapseNavbar()">
-            <span>
-              <fa-icon icon="car"></fa-icon>
-              <span>User Routes</span>
-            </span>
-          </a>
-        </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <a class="nav-link" routerLink="/trending" (click)="collapseNavbar()">
             <span>
@@ -283,6 +275,13 @@
               </a>
             </li>
           </ul>
+        </li>
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+          <a class="nav-link" (click)="toggleDarkMode()">
+            <span>
+              <fa-icon [icon]="moonIcon"></fa-icon>
+            </span>
+          </a>
         </li>
       </ul>
     </div>
