--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -17,7 +17,7 @@ Navbar
 }
 
 .navbar {
-  padding: 0.2rem 1rem;
+  padding: 0 0;
   .dropdown-item.active,
   .dropdown-item.active:focus,
   .dropdown-item.active:hover {
@@ -36,7 +36,7 @@ Navbar
     }
   }
   .container-fluid {
-    background: #333; //sets the colour of the navbar
+    background: #005757; //sets the colour of the navbar
     padding-top: 2rem; //increased the navbar thickness
   }
 
