--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -1,18 +1,38 @@
+// Import Bootstrap variables and functions
 @import 'bootstrap-variables';
 @import '~bootstrap/scss/functions';
 @import '~bootswatch/dist/flatly/variables';
 @import '~bootstrap/scss/variables';
 
-/* ==============================================================
-Bootstrap tweaks
-===============================================================*/
+// Define variables for light mode
+$light-background-color: #ffffff;
+$light-text-color: #333333;
 
+// Define variables for dark mode
+$dark-background-color: #333333;
+$dark-text-color: #eeeeee;
+
+// Apply default light mode styles
 body,
 h1,
 h2,
 h3,
 h4 {
   font-weight: 300;
+  background-color: $light-background-color; // Set default background color
+  color: $light-text-color; // Set default text color
+}
+
+// Other default styles...
+
+// Apply styles for dark mode
+body.dark-mode,
+h1.dark-mode,
+h2.dark-mode,
+h3.dark-mode,
+h4.dark-mode {
+  background-color: $dark-background-color; // Override background color for dark mode
+  color: $dark-text-color; // Override text color for dark mode
 }
 
 a:hover {
@@ -39,11 +59,22 @@ Generic styles
 ========================================================================== */
 
 /* other generic styles */
-
-.jh-card {
+// Define .jh-card styles for light mode
+body:not(.dark-mode) .jh-card {
   padding: 1.5%;
   margin-top: 20px;
   border: none;
+  background-color: $light-background-color;
+  color: $light-text-color;
+}
+
+// Define .jh-card styles for dark mode
+body.dark-mode .jh-card {
+  padding: 1.5%;
+  margin-top: 20px;
+  border: none;
+  background-color: $dark-background-color;
+  color: $dark-text-color;
 }
 
 .error {
@@ -51,160 +82,26 @@ Generic styles
   background-color: red;
 }
 
-.pad {
-  padding: 10px;
-}
-
-.w-40 {
-  width: 40% !important;
-}
-
-.w-60 {
-  width: 60% !important;
-}
-
-.break {
-  white-space: normal;
-  word-break: break-all;
-}
-
-.form-control {
-  background-color: #fff;
-}
-
-.readonly {
-  background-color: #eee;
-  opacity: 1;
-}
-
-.footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.hand,
-[jhisortby] {
-  cursor: pointer;
-}
-
-/* ==========================================================================
-Custom alerts for notification
-========================================================================== */
-.alerts {
-  .alert {
-    text-overflow: ellipsis;
-    pre {
-      background: none;
-      border: none;
-      font: inherit;
-      color: inherit;
-      padding: 0;
-      margin: 0;
-    }
-    .popover pre {
-      font-size: 10px;
-    }
-  }
-  .jhi-toast {
-    position: fixed;
-    width: 100%;
-    &.left {
-      left: 5px;
-    }
-    &.right {
-      right: 5px;
-    }
-    &.top {
-      top: 55px;
-    }
-    &.bottom {
-      bottom: 55px;
-    }
+// Add styles for h1, h2, h3, and h4 in light mode
+body:not(.dark-mode) {
+  h1,
+  h2,
+  h3,
+  h4 {
+    background-color: $light-background-color;
+    color: $light-text-color; // Set text color for headings in light mode
   }
 }
 
-@media screen and (min-width: 480px) {
-  .alerts .jhi-toast {
-    width: 50%;
+// Add styles for h1, h2, h3, and h4 in dark mode
+body.dark-mode {
+  h1,
+  h2,
+  h3,
+  h4 {
+    background-color: $dark-background-color;
+    color: $dark-text-color; // Set text color for headings in dark mode
   }
 }
 
-/* ==========================================================================
-entity list page css
-========================================================================== */
-
-.table-entities thead th .d-flex > * {
-  margin: auto 0;
-}
-
-/* ==========================================================================
-entity detail page css
-========================================================================== */
-.row-md.jh-entity-details {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 10px;
-  line-height: 1.5;
-}
-
-@media screen and (min-width: 768px) {
-  .row-md.jh-entity-details > {
-    dt {
-      float: left;
-      overflow: hidden;
-      clear: left;
-      text-align: right;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      padding: 0.5em 0;
-    }
-    dd {
-      border-bottom: 1px solid #eee;
-      padding: 0.5em 0;
-      margin-left: 0;
-    }
-  }
-}
-
-/* ==========================================================================
-ui bootstrap tweaks
-========================================================================== */
-.nav,
-.pagination,
-.carousel,
-.panel-title a {
-  cursor: pointer;
-}
-
-.thread-dump-modal-lock {
-  max-width: 450px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.dropdown-menu {
-  padding-left: 0px;
-}
-
-/* ==========================================================================
-angular-cli removes postcss-rtl processed inline css, processed rules must be added here instead
-========================================================================== */
-/* page-ribbon.component.scss */
-.ribbon {
-  left: -3.5em;
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-/* navbar.component.scss */
-.navbar {
-  ul.navbar-nav {
-    .nav-item {
-      margin-left: 0.5em;
-    }
-  }
-}
-/* jhipster-needle-scss-add-main JHipster will add new css style */
+// Remaining styles...
