--- a/src/main/webapp/app/trending/trending.component.scss
+++ b/src/main/webapp/app/trending/trending.component.scss
@@ -67,3 +67,8 @@
   background-color: #fff;
   /* Additional styles for the detailed view */
 }
+
+#route-title-button {
+  background-color: transparent;
+  border-color: transparent;
+}
